--- a/templates/login.html
+++ b/templates/login.html
@@ -5,23 +5,26 @@
 {% block main %}
 <div class="container-fluid content" id="container">
             <div class="row">
-                <div class="col-xs-11 col-xs-offset-1" >
+                <div class="col-xs-12 col-xs-offset-0 col-" >
                     <div class="panel" id="try">
                         <div class="panel-heading"><center><b style="color:grey;">LOGIN</b></center></div><br>
                         <div class="panel-body">
                             <form method="post">
                                 {{ form.hidden_tag() }}
                                 <div class="form-group">
-                                    <span style="color:whitesmoke">{{ form.userid.label }}</span><br>
+                                    <span style="color:white;">{{ form.userid.label }}</span><br>
                                     {{ form.userid(style="border: none; opacity: 0.6", class="form-control", id="userid", placeholder="User ID") }}
                                 </div>
 
                                 <div class="form-group">
-                                    <span style="color:whitesmoke">{{ form.password.label }}</span><br>
+                                    <span style="color:white;">{{ form.password.label }}</span><br>
                                     {{ form.password(style="border: none; opacity: 0.6", class="form-control", id="pass", placeholder="Password") }}
                                 </div>
                                 <br>
-                                {{ form.submit(style="color: whitesmoke", id="btn", class="btn btn-block") }}
+                                {{ form.submit(style="color: white;", id="btn", class="btn btn-block") }}
+                                <br>
+                                <p style="color:white;">Don't have an account, sign up now</p>
+
                             </form>
                         </div>
 
