--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -6,7 +6,7 @@
        <div class="container-fluid content" id="container1">
            <form action="{{ url_for('signup1') }}" method="post" enctype="multipart/form-data">
                 <div class="row" id="try1">
-                    <div class="col-xs-6 col-xs-offset-6" >
+                    <div class="col-lg-12 col-sm-12 col" >
                         <div class="panel panel-primary" >
                             <div class="panel-heading"><center><b style="color:black;">NEW USER</b></center></div><br>
                             <p>Contact & User Details:</p>
