blueprint of check_out.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,22 +20,18 @@
         <div class="container">
             <div class="navbar-header">
                 <a href="{{ url_for('login') }}" class="navbar-brand"><img src="./static/image/logo.png" alt="logo" style="" width="80" height="80"><b>  CARs FOREVER</b></a>
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
+
                 <ul class="nav navbar-nav navbar-right">
-                    <li> <a href="setting.php" > <span class="glyphicon glyphicon-user"></span> Setting</a></li>
-                    <li><a href="logout.php"> <span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <!--<li> <a href="setting.php" > <span class="glyphicon glyphicon-user"></span> Setting</a></li>
+                    <li><a href="logout.php"> <span class="glyphicon glyphicon-log-out"></span> Logout</a></li>-->
 
                     <li> <a href="{{ url_for('signup') }}"> <span class="glyphicon glyphicon-user"></span> Sign up</a></li>
-                    <li><a href="login.php"> <span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li> <a href="{{ url_for('login') }}"> <span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 
                 </ul>
-            </div>
+
         </div>
     </nav>
   {% for message in get_flashed_messages() %}
