--- a/templates/cars.html
+++ b/templates/cars.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Check out</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Cars{% endblock %}
+
+{% block main %}
 
 <div>
     <div style="width:23%; float:left;">left</div>
@@ -32,5 +30,5 @@
 
     </div>
 </div>
-</body>
-</html>
+
+{% endblock %}
