--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,10 @@
                     <!--<li> <a href="setting.php" > <span class="glyphicon glyphicon-user"></span> Setting</a></li>
                     <li><a href="logout.php"> <span class="glyphicon glyphicon-log-out"></span> Logout</a></li>-->
 
+                    <li> <a href="{{ url_for('home') }}"> <span class="glyphicon glyphicon-home"></span> Home</a></li>
                     <li> <a href="{{ url_for('signup') }}"> <span class="glyphicon glyphicon-user"></span> Sign up</a></li>
                     <li> <a href="{{ url_for('login') }}"> <span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li> <a href="{{ url_for('aboutus') }}"> <span></span> About Us</a></li>
 
                 </ul>
 
