--- a/templates/cars.html
+++ b/templates/cars.html
@@ -9,22 +9,23 @@
     <div style="width:75%; float:right;">right
         <div style="height:150px; background-color:cyan; margin:3px 3px 3px 3px;">
             <table style="width:100%; height:100%; border:dotted 2px; margin:2px 2px 2px 2px;">
-                <tr><td>1</td><td>2</td><td>3</td></tr>
+                <tr><td><img id="product" src="./static/image/car1.jpg"></td>
+                    <td><button type="button" value="book"></button></td><td>3</td></tr>
             </table>
         </div>
         <div style="height:150px; background-color:cyan; margin:3px 3px 3px 3px;">
         <table style="width:100%; height:100%; border:dotted 2px; margin:2px 2px 2px 2px;">
-            <tr><td>1</td><td>2</td><td>3</td></tr>
+            <tr><td><img id="product" src="./static/image/car2.jpg"></td><td>2</td><td>3</td></tr>
         </table>
         </div>
         <div style="height:150px; background-color:cyan; margin:3px 3px 3px 3px;">
         <table style="width:100%; height:100%; border:dotted 2px; margin:2px 2px 2px 2px;">
-            <tr><td>1</td><td>2</td><td>3</td></tr>
+            <tr><td><img id="product" src="./static/image/car3.jpg"></td><td>2</td><td>3</td></tr>
         </table>
         </div>
         <div style="height:150px; background-color:cyan; margin:3px 3px 3px 3px;">
         <table style="width:100%; height:100%; border:dotted 2px; margin:2px 2px 2px 2px;">
-            <tr><td>1</td><td>2</td><td>3</td></tr>
+            <tr><td><img id="product" src="./static/image/car4.jpg"></td><td>2</td><td>3</td></tr>
         </table>
         </div>
 
