Data insertion done.

--- a/templates/success.html
+++ b/templates/success.html
@@ -8,12 +8,10 @@
     <div class="row">
         <div class="col-xs-12 col-lg-12 col col-xs-offset-0" style="padding-top: 100px;">
             <div class="panel" id="try1">
-                {% for message in get_flashed_messages() %}
                 <div class="container text-center">
-                    <div class="p-3 mb-2 bg-danger text-white">{{ message }}</div>
+                    <h1>Welcome to the world of cars</h1>
                 </div>
                 <br>
-                {% endfor %}
             </div>
         </div>
     </div>
