Product page connected to successful sign up.

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -4,7 +4,7 @@
 
 {% block main %}
        <div class="container-fluid content" id="container1">
-           <form action="{{ url_for('success') }}" class="form-inline" method="POST" enctype="multipart/form-data">
+           <form action="{{ url_for('cars') }}" class="form-inline" method="POST" enctype="multipart/form-data">
                 <div class="row">
                     <div class="col-xs-12 col-lg-12 col col-xs-offset-0" style="padding-top: 100px;">
                         <div class="panel" id="try1">
