redefine product page

--- a/templates/cars.html
+++ b/templates/cars.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 
-<div>
+<div class="container-fluid content">
     <div style="width:23%; float:left;">left</div>
     <div style="width:75%; float:right;">right
         <div style="height:150px; background-color:cyan; margin:3px 3px 3px 3px;">
